# meadow

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  prepare  quickcheck
.github/workflows/: ci.yml
_agent/: Readme.md
_agent/agent/: .gitignore
_agent/manager/: settings.yaml  testing_plan.md
_module/scripts/: prepare  quickcheck
app/backend/: .env.example  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
app/dev_tools_app/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/e2e-tests/: triage-meadow-home-state.md
app/electron_app/: .gitignore  ICON_GENERATION.md  README.md  afterPack.js  afterSign.js  (+11 more)
app/native_utils/fast_git_ops/fast_git_ops_code/: Cargo.toml  make_release
app/native_utils/fast_git_ops/fast_git_ops_code/src/: main.rs
app/native_utils/source_page_search_by_title/source_page_search_by_title_code/: Cargo.toml  make_release
app/native_utils/source_page_search_by_title/source_page_search_by_title_code/src/: main.rs
app/native_utils/working_graph/working_graph_code/: Cargo.toml  make_release
app/native_utils/working_graph/working_graph_code/link_parser/: Cargo.toml
app/native_utils/working_graph/working_graph_code/link_parser/src/: lib.rs
app/native_utils/working_graph/working_graph_code/src/: lib.rs  main.rs  site_page_config.rs  traversal.rs  types.rs
obsidian_meadow_plugin/: .gitignore  README.md  eslint.config.js  main.js  main.ts  manifest.json  package-lock.json  package.json  tsconfig.json
tools/: apply-copyright  dev
(+1692 files in other folders)
