[package]
name = "fast_git_ops"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fast_git_ops_bin"
path = "src/main.rs"

[dependencies]
gix = { version = "0.68", default-features = false, features = ["index", "tree-editor", "revision"] }
gix-actor = "0.33.2"
gix-date = "0.9.4"
gix-hash = "0.15.1"
gix-index = "0.37.0"
gix-object = "0.46.1"
gix-traverse = "0.43.0"
base64 = "0.22.1"
ignore = "0.4"
rayon = "1.10"
scraper = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
sha1 = "0.10"
