[package]
name = "working_graph"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "working_graph_bin"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2"
link_parser = { path = "./link_parser" }


